sas-core/main/default/objects/Segment_Event__c/Segment_Event__c.object-meta.xml
<CustomObject>
    <description>Updates to a specific segment</description>
    <label>Segment Event</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Segment Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>