sas-core/main/default/objects/Segment_Event__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <label>New Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>