sas-core/main/default/objects/Segment_Event__c/fields/Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Office_Code__c</fullName>
    <label>Office Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>