sas-core/main/default/objects/Segment_Event__c/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <description>The operation that occured for this event</description>
    <label>Operation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>