sas-core/main/default/objects/Segment_Event__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <referenceTo>Segment__c</referenceTo>
    <relationshipLabel>Segment Events</relationshipLabel>
    <relationshipName>Segment_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>