sas-core/main/default/objects/Segment_Event__c/fields/Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Date__c</fullName>
    <description>The timestamp for this update</description>
    <label>Update Date</label>
    <type>DateTime</type>
</CustomField>