sas-core/main/default/objects/Segment_Event__c/fields/Update_Number__c.field-meta.xml
<CustomField>
    <fullName>Update_Number__c</fullName>
    <label>Update Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>